Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes

{{$NEXT}}
 [Bugfix]
 - Avoid test failures on 5.26 w/ -Ddefault_inc_excludes_dot
 - Closes https://github.com/kentnl/Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes/issues/2

 [Dependencies::Stats]
 - Dependencies changed since 0.005002, see misc/*.deps* for details
 - develop: +1 ↑2
 - test: ↓1

0.005002 2016-09-10T06:01:15Z fa37013
 [Checks]
 - Derecommend use of ConfigDumper, it was a nice idea, but the dependency and test complexity I can do without.
 - Derecommend use of dztest, again, nice idea, but unwanted complexity proliferation.

 [Dependencies::Stats]
 - Dependencies changed since 0.005001, see misc/*.deps* for details
 - develop: +2 ↑1 (suggests: ↑1)

 [Features / Win32 Ansi Color support]
 - ANSI Escape code colours should render correctly on Win32 if users have Win32::Console::ANSI installed.
 - Patched (with thanks) by Roy Ivy III ( #1 )

0.005001 2015-07-11T14:36:47Z 0e55b0c
 [Checks]
 - gitignore: Make sure all important paths that are expected to be top-level paths match only top level paths.
 - gitignore: Make sure the distname is correctly ignored.

0.005000 2015-07-06T08:09:15Z b2c79f6
 [Checks]
 - Change recommended preference regarding copyfiles= setting.
 - Recommend Makefile.PL
 - Recommend CONTRIBUTING.pod
 - Recommend INSTALL.SKIP when Makefile.PL exists
 - Recommend some basic rules for .gitignore
 - Recommend EUMM cruft exclusions for .gitignore when Makefile.PL exists
 - Recommend proliferating INSTALL.SKIP with *.pod where relevant.
 - Derecommend CONTRIBUTING.mkdn when CONTRIBUTING.pod is present

 [Dependencies::Stats]
 - Dependencies changed since 0.004003, see misc/*.deps* for details
 - develop: +3 -1 (suggests: ↑1)

0.004003 2015-06-19T04:15:00Z c32e093
 [Checks]
 - make LMU-using dists obvious so I can consider if avoiding it is warranted.
 - This is not a certainty of removal, simply me acting as a proxy for other peoples concerns, for in cases where I'm