@@ -4,6 +4,9 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  [Changed / test requires]
  - Test::More 0.89 → 0
 
+ [Removed / runtime requires]
+ - constant
+
 0.005002 2016-09-10T06:01:15Z
 
 0.005001 2015-07-11T14:36:47Z
