@@ -2,12 +2,14 @@ Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes
 
 {{$NEXT}}
  [Bugfix]
- - Avoid test failures on 5.26 w/ -Ddefault_inc_excludes_dot
+ - 1. Avoid test failures on 5.26 w/ -Ddefault_inc_excludes_dot
  - Closes https://github.com/kentnl/Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes/issues/2
+ - 2. Avoid weird problems with linecache consistency by reducing code complexity
 
  [Dependencies::Stats]
  - Dependencies changed since 0.005002, see misc/*.deps* for details
  - develop: +1 ↑2
+ - runtime: -1
  - test: ↓1
 
 0.005002 2016-09-10T06:01:15Z fa37013
